--- a/src/app/dashboard/friend-input/friend-input.component.html
+++ b/src/app/dashboard/friend-input/friend-input.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="personForm">
   <mat-form-field >
     <mat-label>Name:</mat-label>
-    <input type="text" matInput placeholder="Name" formControlName="name" required>
+    <input type="text" matInput placeholder="Name" formControlName="name">
   </mat-form-field>
   <div formArrayName="friends">
     <mat-form-field
@@ -13,13 +13,13 @@
   </div>
   <mat-form-field>
     <mat-label>Age:</mat-label>
-    <input matInput placeholder="Age" formControlName="age" required>
+    <input matInput placeholder="Age" formControlName="age">
   </mat-form-field>
   <mat-form-field>
     <mat-label>Weight:</mat-label>
-    <input matInput placeholder="Weight" formControlName="weight" required>
+    <input matInput placeholder="Weight" formControlName="weight">
   </mat-form-field>
-  <button [disabled]="!personForm.valid" mat-raised-button color="primary" (click)="addPerson()">Add Person</button>
+  <button [disabled]="formInvalid()" mat-raised-button color="primary" (click)="addPerson()">Add Person</button>
   <br>
   <br>
   <button (click)="addMockData()" mat-raised-button color="accent">Add Mock Data</button>
