--- a/src/app/dashboard/friend-input/friend-input.component.html
+++ b/src/app/dashboard/friend-input/friend-input.component.html
@@ -23,6 +23,7 @@
   <br>
   <br>
   <button (click)="addMockData()" mat-raised-button color="accent">Add Mock Data</button>
+  <button (click)="resetStore()" mat-raised-button color="accent">reset</button>
   <br>
   <br>
   <mat-card *ngIf="people.size">
