Reset Store Button Name

--- a/src/app/dashboard/friend-input/friend-input.component.html
+++ b/src/app/dashboard/friend-input/friend-input.component.html
@@ -25,7 +25,7 @@
   <button (click)="addMockData()" mat-raised-button color="accent">Add Mock Data</button>
   <br>
   <br>
-  <button (click)="resetStore()" mat-raised-button color="accent">reset</button>
+  <button (click)="resetStore()" mat-raised-button color="accent">Reset Store</button>
   <br>
   <br>
   <mat-card *ngIf="people.size">
