--- a/src/app/dashboard/friend-input/friend-input.component.html
+++ b/src/app/dashboard/friend-input/friend-input.component.html
@@ -26,10 +26,10 @@
   <button [disabled]="formInvalid()" mat-raised-button color="primary" (click)="addPerson()">Add Person</button>
   <br>
   <br>
-  <button (click)="addMockData()" mat-raised-button color="accent">Add Mock Data</button>
+  <button (click)="resetStore()" mat-raised-button color="accent">Reset NgRx Store</button>
   <br>
   <br>
-  <button (click)="resetStore()" mat-raised-button color="accent">Reset Store</button>
+  <button (click)="loadFirebaseStore()" mat-raised-button color="accent">Load Firebase Store</button>
   <br>
   <br>
   <mat-card *ngIf="people.size">
