--- a/src/styles.css
+++ b/src/styles.css
@@ -9,3 +9,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; max-width: 
 h3 {
   color: white;
 }
+
+.mat-tab-body-content {
+  overflow: hidden !important;
+}
