--- a/src/app/dashboard/data-input/data-input.component.html
+++ b/src/app/dashboard/data-input/data-input.component.html
@@ -20,8 +20,8 @@
     <input matInput placeholder="Age" formControlName="age">
   </mat-form-field>
   <mat-form-field>
-    <mat-label>Weight:</mat-label>
-    <input matInput placeholder="Weight" formControlName="weight">
+    <mat-label>Lucky Number:</mat-label>
+    <input matInput placeholder="Lucky Number" formControlName="luckyNumber">
   </mat-form-field>
   <button [disabled]="formInvalid()" mat-raised-button color="primary" (click)="addPerson()">Add Person</button>
   <br>
