--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<app-dashboard *ngIf="nasa !== 'true' && rxjs !== 'true'"></app-dashboard>
+<app-dashboard *ngIf="nasa !== 'true' &&
+  rxjs !== 'true' &&
+  angular !== 'true'"></app-dashboard>
 <app-nasa *ngIf="nasa === 'true'"></app-nasa>
 <app-rxjs *ngIf="rxjs === 'true'"></app-rxjs>
+<app-angular *ngIf="angular === 'true'"></app-angular>
