ng content test

--- a/src/app/angular/angular/angular.component.html
+++ b/src/app/angular/angular/angular.component.html
@@ -1,7 +1,9 @@
 <p>angular works!</p>
 <app-ng-content-test>
-A simple new input option.
+<p content-one>A simple new input option.</p>
+<p content-two>secondary input!</p>
 </app-ng-content-test>
 <app-ng-content-test>
-<div style="width:100px; height:100px; background-color: coral;"></div>
+<div content-two style="width:100px; height:100px; background-color: purple;"></div>
+<div content-one style="width:100px; height:100px; background-color: coral;"></div>
 </app-ng-content-test>
