--- a/src/app/angular/angular/ng-content-test/ng-content-test.component.html
+++ b/src/app/angular/angular/ng-content-test/ng-content-test.component.html
@@ -1,4 +1,7 @@
 <hr>
 <p>ng-content-test works!</p>
 content input:
-<ng-content></ng-content>
+<ng-content select=[content-one]></ng-content>
+<div class="box">
+  <ng-content select=[content-two]></ng-content>
+</div>
