--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,1 @@
-<app-dashboard *ngIf="nasa !== 'true' &&
-  rxjs !== 'true' &&
-  angular !== 'true'"></app-dashboard>
-<app-nasa *ngIf="nasa === 'true'"></app-nasa>
-<app-rxjs *ngIf="rxjs === 'true'"></app-rxjs>
-<app-angular *ngIf="angular === 'true'"></app-angular>
+<router-outlet></router-outlet>
