cross origin communication

--- a/src/app/cross-origin-communication/cross-origin-communication.component.html
+++ b/src/app/cross-origin-communication/cross-origin-communication.component.html
@@ -1,1 +1,2 @@
-<p>cross-origin-communication works!</p>
+<iframe style="position:absolute; left:-1000px" id="crossOriginRequest" src="http://michaelsimpson.io/rxjs" title="Mars Weather"></iframe>
+{{ theData | json }}
