store update non blocking async

--- a/src/app/dashboard/data-input/data-input.component.html
+++ b/src/app/dashboard/data-input/data-input.component.html
@@ -32,7 +32,7 @@
   <button (click)="loadFirebaseStore()" mat-raised-button color="accent">Load Firebase Store</button>
   <br>
   <br>
-  <mat-card *ngIf="people.size">
+  <mat-card *ngIf="people?.size">
   <mat-list dense>
     <div mat-subheader>PEOPLE</div>
     <mat-list-item *ngFor="let person of people | keyvalue">
