cross origin communication non blocking async

--- a/src/app/cross-origin-communication/cross-origin-communication.component.html
+++ b/src/app/cross-origin-communication/cross-origin-communication.component.html
@@ -1,2 +1,6 @@
 <iframe style="position:absolute; left:-1000px" id="crossOriginRequest" src="http://michaelsimpson.io/rxjs" title="Mars Weather"></iframe>
+The below data is fetched from another instance of michaelsimpson.io using an
+iframe and messages passed through two window objects.
+<br>
+<br>
 {{ theData | json }}
