--- a/src/app/user-management/user-management.component.html
+++ b/src/app/user-management/user-management.component.html
@@ -1,25 +1,27 @@
-<h3 *ngIf="user">
-  HELLO USER {{ user.uid }}!
-  <div *ngIf="user.photoURL"
-    style="height:100px; width:100px; border-radius:50%; overflow:hidden">
-    <img style="width:100%" src={{user.photoURL}} referrerpolicy=“no-referrer”/>
-  </div>
-</h3>
+<span *ngIf="user">
+  <h3>
+    HELLO USER {{ user.uid }}!
+    <div *ngIf="user.photoURL"
+      style="height:100px; width:100px; border-radius:50%; overflow:hidden">
+      <img style="width:100%" src={{user.photoURL}} referrerpolicy=“no-referrer”/>
+    </div>
+  </h3>
 
-<input type="file" #fileUpload [(ngModel)]="uploadedFile" style="display:none"
-  (change)="uploadFile($event)"/>
-<button mat-raised-button color="accent" [disabled]="uploading" style="margin:10px"
-  (click)="fileUpload.click()">
-  <span *ngIf="!uploading">
-    UPLOAD PROFILE IMAGE
-  </span>
-  <span *ngIf="uploading">
-    UPLOADING
-    <mat-icon style="vertical-align:middle">
-      <mat-spinner color="warn" diameter="20"></mat-spinner>
-    </mat-icon>
-  </span>
-</button>
+  <input type="file" #fileUpload [(ngModel)]="uploadedFile" style="display:none"
+    (change)="uploadFile($event)"/>
+  <button mat-raised-button color="accent" [disabled]="uploading" style="margin:10px"
+    (click)="fileUpload.click()">
+    <span *ngIf="!uploading">
+      UPLOAD PROFILE IMAGE
+    </span>
+    <span *ngIf="uploading">
+      UPLOADING
+      <mat-icon style="vertical-align:middle">
+        <mat-spinner color="warn" diameter="20"></mat-spinner>
+      </mat-icon>
+    </span>
+  </button>
+</span>
 
 <hr>
 
