--- a/src/app/angular/angular/angular.component.html
+++ b/src/app/angular/angular/angular.component.html
@@ -1,4 +1,5 @@
 <p>angular works!</p>
+templateTypeScriptAnalysisOne: {{templateTypeScriptAnalysisOne}}
 <app-ng-content-test>
 <p content-one>A simple new input option.</p>
 <p content-two>secondary input!</p>
