--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,6 @@
 <!--
 external library test...
 <lib-michaels-library-u92ac304></lib-michaels-library-u92ac304>
+<app-angular [templateTypeScriptAnalysisOne]="'2'"></app-angular>
 -->
 <router-outlet></router-outlet>
